--- a/Suma2Lealtad/Views/Afiliado/SilverlightEscaner.cshtml
+++ b/Suma2Lealtad/Views/Afiliado/SilverlightEscaner.cshtml
@@ -1,4 +1,4 @@
-﻿@model Suma2Lealtad.Models.AfiliadoSuma
+﻿@model Suma2Lealtad.Models.Afiliado
 <!-- btn btn-success -->
 <div class="col-md-12 col-btn">
     <div class="text-center">
