--- a/Suma2Lealtad/Views/Afiliado/SilverlightPinPad.cshtml
+++ b/Suma2Lealtad/Views/Afiliado/SilverlightPinPad.cshtml
@@ -1,14 +1,4 @@
-﻿@model Suma2Lealtad.Models.AfiliadoWeb
-
-<!-- btn btn-success -->
-<div class="col-md-12 col-btn">
-    <div class="text-center">
-        <a href="javascript:CrearPin()" class="btn btn-success btn-md" role="button">Crear Pin</a>
-        <a href="javascript:CambiarPin()" class="btn btn-success btn-md" role="button">Cambiar Pin</a>
-        <a href="javascript:ReiniciarPin()" class="btn btn-success btn-md" role="button">Reiniciar Pin</a>
-    </div>
-</div>
-<!--// btn btn-success -->
+﻿@model Suma2Lealtad.Models.Afiliado
 
 @{
     //DEBO SACAR LA INFO DEL NRO DEL DOCUMENTO DEL MODELO Y PASARLO COMO PARAMETRO AL HELPER SE SILVERLIGHT
