--- a/Suma2Lealtad/Views/Afiliado/FilterReview.cshtml
+++ b/Suma2Lealtad/Views/Afiliado/FilterReview.cshtml
@@ -26,7 +26,7 @@
                         <br />
                     </div>
 
-                    <form action=@Url.Action("Index", "Afiliado") name="FilterForm" id="FilterForm" method="post" onsubmit="return validateForm();">
+                    <form action="@Url.Action("Index", "Afiliado")" name="FilterForm" id="FilterForm" method="post" onsubmit="return validateForm();">
 
                         <div class="editor-label col-md-4 control-label">
                             Número de Documento :
