--- a/Suma2Lealtad/Views/Afiliado/Filter.cshtml
+++ b/Suma2Lealtad/Views/Afiliado/Filter.cshtml
@@ -14,7 +14,7 @@
             <div class="panel panel-default">
 
                 <div class="panel-heading clearfix panel-gradient">
-                    <h3 class="panel-title">Afiliado / Filtro de Búsqueda de Afiliado</h3>
+                    <h3 class="panel-title">Solicitud de Afiliación / Filtro de Búsqueda de Cliente</h3>
                 </div>
 
                 <div class="panel-body">
@@ -22,7 +22,7 @@
                     <div class="editor-label col-md-4 control-label"> <br /> </div>
                     <div class="editor-field col-md-8"> <br /> </div>
 
-                    <form action=@Url.Action("Find", "Afiliado") name="form" method="post" onsubmit="return validatePass();">
+                    <form action="@Url.Action("Find", "Afiliado")" name="form" method="post" onsubmit="return validatePass();">
 
                         <div class="editor-label col-md-4 control-label">
                             Número de Documento :
