--- a/Suma2Lealtad/Views/Afiliado/OperacionesPinPad.cshtml
+++ b/Suma2Lealtad/Views/Afiliado/OperacionesPinPad.cshtml
@@ -1,4 +1,4 @@
-﻿@model Suma2Lealtad.Models.AfiliadoSuma
+﻿@model Suma2Lealtad.Models.Afiliado
 
 @{
     ViewBag.Title = "OperacionesPinPad";
@@ -32,11 +32,7 @@
                     <div class="form-group">
                         <div class="col-md-12 col-btn">
                             <div class="pull-right">
-                                @*<a id="boton1" href="javascript:Siguiente()" class="btn btn-success btn-md" role="button">Siguiente</a>
-                                    <a id="boton2" href="javascript:Siguiente2()" class="btn btn-success btn-md" role="button">Siguiente</a>*@
-                                @*<a id="boton3" href="@Url.Action("", "")" class="btn btn-success btn-md" role="button">Guardar</a>*@
-                                @*<input id="boton3" type="submit" class="btn btn-success btn-md" value="Guardar" />*@
-                                <a id="boton4" href="@Url.Action("Edit", "Afiliado")" class="btn btn-danger btn-md" role="button">Salir</a>
+                                <a id="boton4" href="@Url.Action("", "")" class="btn btn-danger btn-md" role="button">Cancelar</a>
                             </div>
                         </div>
                     </div>
