--- a/SumaPlazas.Dispositivos.Escaner/MainPage.xaml
+++ b/SumaPlazas.Dispositivos.Escaner/MainPage.xaml
@@ -1,15 +1,13 @@
-﻿<UserControl
+﻿<UserControl x:Class="SumaPlazas.Dispositivos.Escaner.MainPage"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-    xmlns:sdk="http://schemas.microsoft.com/winfx/2006/xaml/presentation/sdk" x:Class="SumaPlazas.Dispositivos.Escaner.MainPage"
     mc:Ignorable="d"
-    d:DesignHeight="300" d:DesignWidth="600">
+    d:DesignHeight="400" d:DesignWidth="600">
 
     <Grid x:Name="LayoutRoot" Background="White">
         <Image x:Name="scannedImage" Height="280" VerticalAlignment="Top" Margin="140,10,140,0" />
-        <!--<sdk:Label x:Name="lblProcesando" HorizontalAlignment="Left" Height="28" Margin="10,10,0,0" VerticalAlignment="Top" Width="104" Content="..." Visibility="Collapsed" />-->
         <ListBox x:Name="listBox1" Margin="10"/>
     </Grid>
 </UserControl>
