Ajustes menores a último commit.

--- a/Suma2Lealtad/Views/Afiliado/GenericView.cshtml
+++ b/Suma2Lealtad/Views/Afiliado/GenericView.cshtml
@@ -3,14 +3,14 @@
 }
 
 <div class="jumbotron">
-  <div class="container">
-    <h3><b>Afiliado</b></h3>
-    <p>Aquí va un mensaje de resultado de la acción.</p>
-  </div>
+    <div class="container">
+        <h3><b>Afiliado</b></h3>
+        <p>@ViewBag.Mensaje</p>
+    </div>
 </div>
 
 <div class="form-group">
-	<div class="col-md-12 col-btn">
-        <a class="btn btn-success btn-lg" href="@Url.Action("Filter","Afiliado")">Continuar</a>
-	</div>
+    <div class="col-md-12 col-btn">
+        <a class="btn btn-success btn-lg" href="@Url.Action("Filter", "Afiliado")">Continuar</a>
+    </div>
 </div>
