--- a/Suma2Lealtad/Views/Afiliado/Index.cshtml
+++ b/Suma2Lealtad/Views/Afiliado/Index.cshtml
@@ -85,10 +85,10 @@
                             </td>
 
                             <td class="text-right">
-                                <a id="@(item.id)_edit" href="@Url.Action("Edit", "Afiliado", new { id = item.id })" class="btn btn-info btn-xs disabled">
+                                <a id="@(item.id)_edit" href="@Url.Action("Edit", "Afiliado", new { id = item.id })" class="btn btn-info btn-xs" >
                                     <span class="glyphicon glyphicon-edit"></span>
                                 </a>
-                                <a id="@(item.id)_approve" href="@Url.Action("Edit", "Afiliado", new { id = item.id })" class="btn btn-info btn-xs disabled">
+                                <a id="@(item.id)_approve" href="@Url.Action("Aprobar", "Afiliado", new { id = item.id })" class="btn btn-info btn-xs" >
                                     <span class="glyphicon glyphicon-ok"></span>
                                 </a>
                             </td>
@@ -141,8 +141,10 @@
 
                         $('.table tbody tr').removeClass("active");
                         $(this).addClass("active");
-                        $("#" + rowId + "_edit").removeClass("disabled");
-                        $("#" + rowId + "_approve").removeClass("disabled");
+                        //$("#" + rowId + "_edit").removeClass("disabled");
+                        //$("#" + rowId + "_approve").removeClass("disabled");
+                        //$("#" + rowId + "_edit").
+                        //$("#" + rowId + "_approve").show();
 
                         $("#CrearPin").addClass("disabled"); 
                         $("#CambiarPin").addClass("disabled"); 
